[project]
name = "comfyui-fal-connector"
description = "The ComfyUI-fal-Connector is a tool designed to provide an integration between ComfyUI and fal. This extension allows users to execute their ComfyUI workflows directly on [a/fal.ai](https://fal.ai/). This enables users to leverage the computational power and resources provided by fal.ai for running their ComfyUI workflows."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["fal-client>=0.3.0", "httpx", "httpx-sse", "fal"]

[project.urls]
Repository = "https://github.com/badayvedat/ComfyUI-fal-Connector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "badayvedat"
DisplayName = "ComfyUI-fal-Connector"
Icon = ""
